--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <link rel="shortcut icon" href="https://supercrypta.github.io/supercrypta/favicon.ico" />
+
     <title>Super Crypta</title>
 
     <!-- Bootstrap core CSS -->
