--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
 
       <div class="jumbotron">
-          <div class="col-sm-8 mx-auto">
+          <div class="col-sm-9 mx-auto">
               <h1>Super Crypta</h1>
               <h5>Cryptocurrency Portfolio for MacOS on Notification Center</h5>
             
@@ -37,6 +37,7 @@
                 <li>Bitcoin: 1MYZDEpaE7157njrvq8QBmbrgUMB3SSuhx</li> 
                 <li>Litecoin: LQRBruBi9TDHj62U46DU3TNN6fXJrrDyJZ</li> 
                 <li>ETH: 0x4c77a2A8a570D0066A57a5Cf58bE590e7b9D1A5c</li> 
+                <li>IOTA: <small>I9MNUCRMPZPNAFGHGAPQOFBIKVHPWRDQAMYOHSN9QHD9LIESJOWKC9YSRHSRIEKRDMF9STBKRATZXDPLBSGRCLS9WX</small> </li> 
               </ul>
             
         </div>
