--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="cryptocurrency tracking for mac">
     <meta name="author" content="">
     <link rel="shortcut icon" href="https://supercrypta.github.io/supercrypta/favicon.ico" />
 
