--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <h5>Cryptocurrency Portfolio for MacOS on Notification Center</h5>
             
               <p style="padding-top: 5px">
-                    <a class="btn btn-primary" href="https://github.com/supercrypta/supercrypta/releases/download/0.37/Cryptonator.app.zip" role="button">Download 0.37</a>
+                    <a class="btn btn-primary" href="https://github.com/supercrypta/supercrypta/releases/download/0.39/SuperCrypta.zip" role="button">Download 0.39</a>
               </p>
             
               <video style="padding-top: 10px; padding-bottom: 20px" width="304" height="600" autoplay loop>
