--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
            
  
       <div id="content">
-            <table>
+            <table id="donate">
                 <tbody>
                     <tr>
                         
