--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="jumbotron">
           <div class="col-sm-9 mx-auto">
               <h1>Super Crypta</h1>
-              <h5>Cryptocurrency Portfolio for MacOS on Notification Center</h5>
+              <h5>Cryptocurrency Portfolio for macOS' Notification Center</h5>
             
               <p style="padding-top: 5px">
                     <a class="btn btn-primary" href="https://github.com/supercrypta/supercrypta/releases/download/0.42/SuperCrypta.zip" role="button">Download 0.42</a>
