--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
 
   <body>
 
+<div id="google_translate_element"></div><script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+}
+</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+        
+        
       <div class="jumbotron">
           <div class="col-sm-9 mx-auto">
               <h1>Super Crypta</h1>
