--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ function googleTranslateElementInit() {
               <h5>Cryptocurrency Portfolio for macOS' Notification Center</h5>
             
               <p style="padding-top: 5px">
-                    <a class="btn btn-primary" href="https://github.com/supercrypta/supercrypta/releases/download/v0.482/SuperCrypta.zip" role="button">Download 0.482</a>
+                    <a class="btn btn-primary" href="https://itunes.apple.com/us/app/supercrypta/id1299563325?ls=1&mt=12" role="button">Download</a>
               </p>
             
               <video style="padding-top: 10px; padding-bottom: 20px" width="304" height="600" autoplay loop>
