show controls not autoplay

--- a/index.html
+++ b/index.html
@@ -303,9 +303,26 @@
         
         <div class="col-md-8">
           <p>  
-	          <video style="padding-top: 10px; padding-bottom: 20px" width="304" height="600" autoplay loop>
+
+	          <video style="padding-top: 10px; padding-bottom: 20px" width="304" height="600" controls >
                     <source src="web/supercrypta.mp4" type="video/mp4">
               </video>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
               
            </p>
         </div>
