--- a/web/index.html
+++ b/web/index.html
@@ -68,6 +68,10 @@
     enable_page_level_ads: true
   });
 </script>
+	  
+	  
+	  <script type="text/javascript"> var infolinks_pid = 3047987; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
+	  
 
   </head>
   <body>
