--- a/web/index.html
+++ b/web/index.html
@@ -468,7 +468,7 @@
                     var btcElems = document.getElementsByClassName('btc');
                     for(var i = 0;i < btcElems.length;i++) {
                         var cd = new Fr.CryptoDonate({
-                            baseURL: '',
+                            baseURL: 'web/',
 
 
                             strings: {
