--- a/web/index.html
+++ b/web/index.html
@@ -501,7 +501,7 @@
                         var cd = new Fr.CryptoDonate({
                             coin: 'ethereum',
                             address: '0x4c77a2A8a570D0066A57a5Cf58bE590e7b9D1A5c',
-                            baseURL: '',
+                            baseURL: '../web',
                             strings: {
                                 button: 'Ethereum',
                                 buttonTitle: 'Donate {coinName}',
@@ -528,7 +528,7 @@
                         var cd = new Fr.CryptoDonate({
                             coin: 'litecoin',
                             address: 'LQRBruBi9TDHj62U46DU3TNN6fXJrrDyJZ',
-                            baseURL: '',
+                            baseURL: '../web',
                             strings: {
                                 button: 'Litecoin',
                                 buttonTitle: 'Donate {coinName}',
@@ -555,7 +555,7 @@
                         var cd = new Fr.CryptoDonate({
                             coin: 'monero',
                             address: '47cf2ggw9HCXHeNqqRjvu592mpxUci9cNTGfgHRGbkuGUhPMRHacSdE4xgEDf7KNKgACL8Y2pcLPHh3X6DjxjGjXB7Bq7Px',
-                            baseURL: '',
+                            baseURL: '../web',
                             strings: {
                                 button: 'Monero',
                                 buttonTitle: 'Donate {coinName}',
