--- a/index.html
+++ b/index.html
@@ -399,6 +399,7 @@
 	          <li>Coins from <a target="_blank" href="https://coinmarketcap.com">coinmarketcap</a> </li>
 	          <li>Convert values between cryptocurrencies or fiat currency</li>
 	          <li>Cryptocurrency Calculator</li>
+	          <li>iCloud Sync to share the portfolio with all your computers</li>
 	          <li>Easy to use </li>
           </ul>
           
