--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         
         <div class="col-md-4 d-flex align-items-center" >
           <div>
-            <h2>Convert and canculate</h2>
+            <h2>Convert and calculate</h2>
             <p>Convert and calculate hundreds of cryptocurrencies to any other cryptocurrency or a custom fiat currency.
             </p>
           </div>
