--- a/help/index.html
+++ b/help/index.html
@@ -59,10 +59,10 @@
 			<li>
 				<a class="cd-faq-trigger" href="#0">Initial SetUp</a>
 				<div class="cd-faq-content">
-					<p><img class="img-fluid" src="images/1%20-%20Display%20notification%20Center.png" /></p>
-					<p><img class="img-fluid" src="images/2%20-%20Add%20Super%20Crypta.png" style="padding-top: 10px"/></p>
-					<p><img class="img-fluid" src="images/2.1%20-%20Add%20Super%20Crypta.png" style="padding-top: 10px"/></p>
-					<p><img class="img-fluid" src="images/2.2%20-%20Add%20Super%20Crypta.png" style="padding-top: 10px"/></p>
+					<p><img class="img-fluid" src="images/1%20-%20Display%20notification%20Center.jpeg" /></p>
+					<p><img class="img-fluid" src="images/2%20-%20Add%20Super%20Crypta.jpeg" style="padding-top: 10px"/></p>
+					<p><img class="img-fluid" src="images/2.1%20-%20Add%20Super%20Crypta.jpeg" style="padding-top: 10px"/></p>
+					<p><img class="img-fluid" src="images/2.2%20-%20Add%20Super%20Crypta.jpeg" style="padding-top: 10px"/></p>
 				</div> <!-- cd-faq-content -->
 			</li>
 
@@ -78,9 +78,9 @@
 			<li>
 				<a class="cd-faq-trigger" href="#0">Add New Coins</a>
 				<div class="cd-faq-content">
-					<p><img class="img-fluid" src="images/3%20-%20Add%20Coins.png"/></p>
-					<p><img class="img-fluid" src="images/3.1%20-%20Add%20Coins.png" style="padding-top: 10px"/></p>
-					<p><img class="img-fluid" src="images/3.2%20-%20Add%20Coins.png" style="padding-top: 10px"/></p>
+					<p><img class="img-fluid" src="images/3%20-%20Add%20Coins.jpeg"/></p>
+					<p><img class="img-fluid" src="images/3.1%20-%20Add%20Coins.jpeg" style="padding-top: 10px"/></p>
+					<p><img class="img-fluid" src="images/3.2%20-%20Add%20Coins.jpeg" style="padding-top: 10px"/></p>
 				</div> <!-- cd-faq-content -->
 			</li>
 
@@ -98,8 +98,8 @@
 			<li>
 				<a class="cd-faq-trigger" href="#0">Misc</a>
 				<div class="cd-faq-content">
-					<p><img class="img-fluid" src="images/5%20-%20general.png"/></p>
-					<p><img class="img-fluid" src="images/5.1%20general%202.png" style="padding-top: 10px"/></p>
+					<p><img class="img-fluid" src="images/5%20-%20general.jpeg"/></p>
+					<p><img class="img-fluid" src="images/5.1%20general%202.jpeg" style="padding-top: 10px"/></p>
 
 					
 				</div> <!-- cd-faq-content -->
