--- a/help/index.html
+++ b/help/index.html
@@ -40,7 +40,7 @@
 	
 	<h1 class="row">
     	<div class="col-md-6 text-left"><a style="padding-left: 10px" title="Return" href="../index.html"><img style="padding-top: 15px" src="../web/img/logo_supercrypta_128.png" width="50"> </a></div>
-		<div class="col-md-6 text-left"><span style="padding-right: 10px">How to use</span></div>
+		<div class="col-md-6 text-right"><span style="padding-right: 10px">How to use</span></div>
   	</h1>
   
 </header>
