--- a/help/index.html
+++ b/help/index.html
@@ -47,7 +47,7 @@
 <section class="cd-faq">
 
 	<ul class="cd-faq-categories">
-		<li><a class="selected" href="#guide">Initial SetUp</a></li>
+		<li><a class="selected" href="#guide">Initial Setup</a></li>
 		<li><a class="selected" href="#addCoin">Add New Coins</a></li>
 		<li><a class="selected" href="#misc">Misc</a></li>
 	</ul>
@@ -55,9 +55,9 @@
 
 	<div class="cd-faq-items">
 		<ul id="guide" class="cd-faq-group">
-			<li class="cd-faq-title"><h2>Initial SetUp</h2></li>
+			<li class="cd-faq-title"><h2>Initial Setup</h2></li>
 			<li>
-				<a class="cd-faq-trigger" href="#0">Initial SetUp</a>
+				<a class="cd-faq-trigger" href="#0">Initial Setup</a>
 				<div class="cd-faq-content">
 					<p><img class="img-fluid" src="images/1%20-%20Display%20notification%20Center.jpeg" /></p>
 					<p><img class="img-fluid" src="images/2%20-%20Add%20Super%20Crypta.jpeg" style="padding-top: 10px"/></p>
