--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
           
           <h4>Support</h4>
 	      <ul>
-		      <li>  <a href="help/index.html">How to use</a>  </li>
+		      <li><a style="color: #12dea8" href="help/index.html">How to use</a>  </li>
 		      <li>Email <a href="mailto:supercrypta@gmail.com?Subject=Hello%20there" target="_top">supercrypta@gmail.com</a></li>
 	          <li>Open a ticket <a target="_blank" href="https://github.com/supercrypta/supercrypta.github.io/issues">here</a> </li>
           </ul>
