--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="cryptocurrency tracking for mac">
+    <meta name="coinzilla" content="coinzilla-173315b10b744107fb" />
     <meta name="author" content="">
     <link rel="shortcut icon" href="favicon.ico" />
     <title>Super Crypta</title>
