--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="cryptocurrency tracking for mac">
     <meta name="author" content="">
+    <meta name="coinzilla" content="coinzilla-173315b10b744107fb" />
     <link rel="shortcut icon" href="favicon.ico" />
     <title>Super Crypta</title>
     <!-- Bootstrap core CSS -->
