--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
           <h4>Support</h4>
 	      <ul>
 		  <li><a style="color: #12dea8" href="help/index.html">How to use</a>  </li>
-	          <li>Sorry guys SuperCrypta will Hibernate for a while. CoinMarketCap is a paid service now. I can't pay for it. So I will try to migrate to another API. Keep Hodling.</li>
+	          <li>Sorry guys SuperCrypta will hibernate for a while. CoinMarketCap is a paid service now. I can't pay for it. So I will try to migrate to another API. Keep Hodling.</li>
 		      
           </ul>
             
